--- a/setup/Brewfile
+++ b/setup/Brewfile
@@ -53,26 +53,26 @@ cask "bartender" # Manage menu bar icons
 cask "cleanmymac" # System clean up manager
 cask "cleanshot" # Annotated screenshots & quick videos
 cask "coteditor" # Simple code/text editor
-cask "discord" # Messaging social platform
-cask "docker" # Running containerized applications
+# cask "discord" # Messaging social platform
+# cask "docker" # Running containerized applications
 cask "hazeover" # Fades out inactive windows
 cask "insomnia" # API client
 cask "itsycal" # Tiny popup calendar in a menu bar
 cask "keka" # File archiver and extractor
-cask "ledger-live" # Crypto hardware wallet manager
+# cask "ledger-live" # Crypto hardware wallet manager
 cask "marta" # File manager
-cask "nordvpn" # VPN client
+# cask "nordvpn" # VPN client
 cask "notion" # Note-taking app
 cask "optimage" # Image optimization
 cask "qobuz" # Hi-rez audio streaming platform
 cask "raycast" # All-in-one app / tasks launcher
 cask "rectangle" # Window manager
 cask "rocket" # Handy emojis picker
-cask "slack" # Messaging social platform
+# cask "slack" # Messaging social platform
 cask "superduper" # Data backup
 cask "syntax-highlight", args: { no_quarantine: true } # Preview many different source code files
 cask "tableplus" # Database managmenent system
-cask "telegram" # Messenger
+# cask "telegram" # Messenger
 cask "visual-studio-code" # Code editor
 cask "vivaldi" # Browser with built-in privacy
 cask "wezterm" # Better terminal emulator
