--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -3,9 +3,8 @@ gui:
   expandFocusedSidePanel: true
   nerdFontsVersion: "3"
   authorColors:
-    "Nick Khan": "magenta"
-    "Nick S. Khan": "magenta"
-    "Nick Plekhanov": "magenta"
+    "wumingfei": "magenta"
+    "White robe": "magenta"
   theme:
     activeBorderColor:
       - magenta
